--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -1,3 +1,38 @@
+    @MISC{IMS-skripta,
+      author =          "Petr Peringer",
+      title  =          "\it{Modelování a simulace - studijní opora}",
+      url    =          "https://wis.fit.vutbr.cz/FIT/st/cfs.php/course/IMS-IT/texts/opora-ims.pdf",
+      note   =          "[Online; citováno 7. 4. 2019]"
+    }
+    
+    @article{Schaller1997,
+        author = {R.R. Schaller},
+        journal = {IEEE Spectrum},
+        title = {Moore's law},
+        subtitle = {past, present and future},
+        year = {1997},
+        pages = {52-59},
+        volume = {34},
+        number = {6},
+        ISSN = {0018-9235},
+        medium = {online},
+        accessed = {2019-04-19},
+        DOI = {10.1109/6.591665},
+        URL = {http://ieeexplore.ieee.org/document/591665/},
+    }
+      
+    @MISC{list-of-process-modelling-lang,
+        author = {Pawlewski, Pawel},
+        year = {2014},
+        month = {12},
+        pages = {716-720},
+        title = {Multimodal Approach to Modeling of Manufacturing Processes},
+        volume = {17},
+        journal = {Procedia CIRP},
+        doi = {10.1016/j.procir.2014.01.130},
+        url = "https://www.researchgate.net/publication/270980703_Multimodal_Approach_to_Modeling_of_Manufacturing_Processes"
+    }
+    
     @BOOK{Pravidla,
       author =       "Zdeněk Hlavsa and others",
       title =        "{\it Pravidla českého pravopisu}",
