--- a/text/projekt-01-kapitoly-chapters.tex
+++ b/text/projekt-01-kapitoly-chapters.tex
@@ -85,9 +85,9 @@ Výsledky je vhodné vizualizovat tak, abychom mohli s nimi dále pracovat a ana
 
 V rámci simulace můžeme sledovat i hodnoty, které nepřímo souvisí s výsledkem simulace. Mezi tyto hodnoty patří např.:
 \begin{itemize}
-    \item Strojový čas
-    \item Přesnost použité numerické metody
-    \item Alokace zdrojů při simulaci
+    \item Strojový čas -- čas po který simulace využívá výpočetní stroj
+    \item Přesnost numerické metody -- mění se v závislosti na použité numerické metodě
+    \item Alokace zdrojů při simulaci -- využití fyzických a virtuálních zdrojů výpočetního stroje
 \end{itemize}
 
 Část z těchto proměnných budeme sledovat v rámci této bakalářské práce. Popis sledování a následného porovnání lze nalézt v kapitole \ref{kapitola5}.
