confirmed 12.57, final theory run

--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -4,7 +4,16 @@
       url    =          "https://wis.fit.vutbr.cz/FIT/st/cfs.php/course/IMS-IT/texts/opora-ims.pdf",
       note   =          "[Online; citováno 7. 4. 2019]"
     }
-    
+
+@mastersthesis{Zapletal2016,
+  author = {Marek Zapletal},
+  title = {Implementace a testování vybraných optimalizačních metod pro úlohy odhadu parametrů simulačních modelů},
+  address = {Brno},
+  year = {2016},
+  school = {Vysoké učení technické v Brně, Fakulta strojního inženýrství},
+  type = {Diplomová práce},
+}
+
     @article{Schaller1997,
         author = {R.R. Schaller},
         journal = {IEEE Spectrum},
@@ -20,7 +29,79 @@
         DOI = {10.1109/6.591665},
         URL = {http://ieeexplore.ieee.org/document/591665/},
     }
-      
+
+@misc{modelica-example,
+  author = {Michael M. Tiller},
+  journal = {Modelica by Example},
+  title = {Modelica by Example},
+  medium = {online},
+  accessed = {2019-04-21},
+  URL = {http://book.xogeny.com/behavior/equations/physical/\#physical-types},
+}
+
+@book{MATLAB:2010,
+year = {2010},
+author = {MATLAB},
+title = {version 7.10.0 (R2010a)},
+publisher = {The MathWorks Inc.},
+address = {Natick, Massachusetts}
+}
+
+@INPROCEEDINGS{Fritzson02modelica--,
+    author = {Peter Fritzson and Peter Bunus},
+    title = {Modelica -- A General Object-Oriented Language for Continuous and Discrete-Event System Modeling},
+    booktitle = {IN PROCEEDINGS OF THE 35TH ANNUAL SIMULATION SYMPOSIUM},
+    year = {2002},
+    pages = {14--18},
+    publisher = {}
+}
+
+@Misc{scipy,
+  author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title =     {{SciPy}: Open source scientific tools for {Python}},
+  year =      {2001--2019},
+  url = "http://www.scipy.org/",
+  note = {[Online; citováno \today]}
+}
+
+@article{James_2015,
+  doi = {10.1088/0264-9381/32/6/065001},
+  url = {https://doi.org/10.1088%2F0264-9381%2F32%2F6%2F065001},
+  year = 2015,
+  month = {feb},
+  publisher = {{IOP} Publishing},
+  volume = {32},
+  number = {6},
+  pages = {065001},
+  author = {Oliver James and Eug{\'{e}}nie von Tunzelmann and Paul Franklin and Kip S Thorne},
+  title = {Gravitational lensing by spinning black holes in astrophysics, and in the {movieInterstellar}},
+  journal = {Classical and Quantum Gravity},
+}
+
+@article{belanger2010and,
+  title={The what, where and why of real-time simulation},
+  author={Belanger, J and Venne, P and Paquin, Jean-Nicolas},
+  journal={Planet Rt},
+  volume={1},
+  number={1},
+  pages={25--29},
+  year={2010}
+}
+
+@article{Fragile_2007,
+  doi = {10.1086/521092},
+  url = {https://doi.org/10.1086\%2F521092},
+  year = 2007,
+  month = {oct},
+  publisher = {{IOP} Publishing},
+  volume = {668},
+  number = {1},
+  pages = {417--429},
+  author = {P. Chris Fragile and Omer M. Blaes and Peter Anninos and Jay D. Salmonson},
+  title = {Global General Relativistic Magnetohydrodynamic Simulation of a Tilted Black Hole Accretion Disk},
+  journal = {The Astrophysical Journal},
+}
+
     @MISC{list-of-process-modelling-lang,
         author = {Pawlewski, Pawel},
         year = {2014},
@@ -32,7 +113,7 @@
         doi = {10.1016/j.procir.2014.01.130},
         url = "https://www.researchgate.net/publication/270980703_Multimodal_Approach_to_Modeling_of_Manufacturing_Processes"
     }
-    
+
     @BOOK{Pravidla,
       author =       "Zdeněk Hlavsa and others",
       title =        "{\it Pravidla českého pravopisu}",
@@ -40,7 +121,7 @@
       year =         "2005",
       isbn =         "80-200-1327-X",
     }
-    
+
     @BOOK{Knuth,
       author =       "Donald E. Knuth",
       title =        "{\it The {\TeX}book}",
@@ -48,7 +129,7 @@
       year =         "1996",
       isbn =         "0-201-13447-0",
     }
-    
+
     @BOOK{Rybicka,
       author =       "Jiří Rybička",
       title =        "{\it {\LaTeX} pro začátečníky}",
@@ -99,7 +180,7 @@
       url =          "http://www.fit.vutbr.cz/info/szz/bib\_citace.php",
       note =         "[Online; navštíveno 31.07.2017]"
     }
-   
+
     @MISC{biblio,
       author =       "Olga Biernátová and Jan Skůpa",
       title =        "{\it Bibliografické odkazy a citace dokumentů}",
@@ -108,35 +189,35 @@
       year =         "2011",
       note =         "[Online; navštíveno 14.07.2017]"
     }
-   
+
     @MISC{formalniBP,
       author =       "Zdena Rábová and Petr Přikryl and Petr Peringer and Petr Lampa and Bohuslav Křena",
       title =        "{\it Závazné pokyny pro vypracování a odevzdání bakalářské práce}",
       url =          "http://www.fit.vutbr.cz/info/szz/pokyny\_bp.php",
       note =         "[Online; navštíveno 30.06.2016]"
     }
-   
+
     @MISC{formalniDP,
       author =       "Zdena Rábová and Petr Přikryl and Petr Peringer and Petr Lampa and Bohuslav Křena",
       title =        "{\it Závazné pokyny pro vypracování a odevzdání diplomové práce}",
       url =          "http://www.fit.vutbr.cz/info/szz/pokyny\_dp.php",
       note =         "[Online; navštíveno 30.06.2016]"
     }
-   
+
     @MISC{smernice,
       author =       "Petr Štěpánek",
       title =        "{\it Směrnice rektora č. 72/2017 -- Úprava, odevzdávání a zveřejňování závěrečných prací}",
       url =          "https://www.vutbr.cz/uredni-deska/vnitrni-predpisy-a-dokumenty/smernice-c-72-2017-uprava-odevzdavani-a-zverejnovani-zaverecnych-praci-d161410",
       note =         "[Online; navštíveno 27.07.2018]"
     }
-   
+
    @MISC{smerniceFIT,
       author =       "Pavel Zemčík",
       title =        "{\it Směrnice děkana č. 7/2018 -- Úprava, odevzdávání a zveřejňování závěrečných prací na FIT VUT}",
       url =          "https://www.vutbr.cz/uredni-deska/vnitrni-predpisy-a-dokumenty/-d161410/uplne-zneni-smernice-c-72-2017-p162769",
       note =         "[Online; navštíveno 27.07.2018]"
     }
-   
+
     @MISC{prirucka,
       key =          "Cerna",
       author =       "Anna Černá and Jan Chromý and Hana Konečná and others",
@@ -145,28 +226,28 @@
       url =          "http://prirucka.ujc.cas.cz/",
       note =         "[Online; navštíveno 30.07.2018]"
     }
-   
+
     @MISC{Herout,
       author =       "Adam Herout",
       title =        "{\it herout.net -- Poznámky učitele, kouče, čtenáře.}",
       url =          "http://www.herout.net/",
       note =         "[Online; navštíveno 30.07.2018]"
     }
-   
+
     @MISC{chyby,
       author =       "Igor Szöke",
       title =        "{\it Textová část BP/DP - Lessons learned}",
       url =          "http://blog.igor.szoke.cz/2012/01/textova-cast-bpdp-lessons-learned-1.html",
       note =         "[Online; navštíveno 30.07.2018]"
     }
-   
+
     @MISC{rady,
       author =       "Igor Szöke",
       title =        "{\it Píšete diplomku? 15+1 rad, které vám pomohou.}",
       url =          "http://blog.igor.szoke.cz/2011/12/pisete-diplomku-151-rad-ktere-vam.html",
       note =         "[Online; navštíveno 30.07.2018]"
     }
-   
+
     @MISC{Beran,
       author =       "Vítězslav Beran",
       title =        "{\it Beran-BP DP Projekty}",
@@ -180,7 +261,7 @@
       url =          "http://www.fit.vutbr.cz/\\textasciitilde beranv/podpora/Jak\%20psat\%20technickou\%20zpravu.pdf",
       note =         "[Online; navštíveno 30.07.2018]"
     }
-   
+
     @MISC{Cernocky,
       key =          "Cernocky",
       author =       "Jan Černocký",
@@ -188,7 +269,7 @@
       url =          "http://merlin.fit.vutbr.cz/wiki/index.php/Cernocky\_BP\_DP-obecne",
       note =         "[Online; navštíveno 25.07.2016]"
     }
-   
+
     @MISC{CernockyEnglish,
       key =          "Cernocky",
       author =       "Jan Černocký",
@@ -196,14 +277,14 @@
       url =          "https://merlin.fit.vutbr.cz/wiki/index.php/English_SOS",
       note =         "[Online; navštíveno 25.07.2016]"
     }
-   
+
     @MISC{Zemcik,
       author =       "Pavel Zemčík",
       title =        "{\it Všeobecné pokyny pro studenty a vůbec}",
       url =          "http://www.fit.vutbr.cz/~zemcik/Pokyny.pdf",
       note =         "[Online; navštíveno 25.07.2016]"
     }
-   
+
     @BOOK{Lebrun2011,
       author =       {Jean-Luc Lebrun},
       title =        {\it Scientific Writing 2.0: a reader and writer's guide},
@@ -213,4 +294,3 @@
       owner =        {herout},
       timestamp =    {2015.01.20}
     }
-  
