--- a/text/projekt-01-kapitoly-chapters.tex
+++ b/text/projekt-01-kapitoly-chapters.tex
@@ -101,14 +101,14 @@ Jako všechny procesy, tak i simulace mají své pozitivní i negativní vlastno
 Jak už bylo zmíněno výše, hlavními výhodami jsou ušetření času a ceny experimentu. Dále to pak mohou být bezpečnost, replikovatelnost a rychlost. Bližší popis výhod:
 
 \begin{enumerate}
-    \item Cena je v dnešní době velmi důležitým faktorem pro potřeby simulací, protože experimenty s reálným systémem mohou být velmi drahé. Díky využití modelů a simulací je možné výrazně ušetřit na výrobě testovacích kusů. Toto je velmi patrné například v leteckém průmyslu - reálné systémy (letadla, jejich komponenty) se zde využívají až pro validaci výsledků předchozích simulací.
-    \item Rychlost je dalším z kritérií pro běh simulací. V závislosti na výkonu výkonu stroje, který simulaci vykonává, můžeme simulaci zpomalovat a zrychlovat dle našich potřeb. Důležitým faktorem je zde výkon výpočetního zdroje, který nám omezuje maximální (minimální) rychlost simulace. Dobrým příkladem pro nutnost zrychlování simulace je sledování pohybu litosferických desek. Tento pohyb je v reálném systému velmi pomalý, ale pokud máme dostatečně výkonný výpočetní stroj, můžeme simulaci zrychlit a dosáhnout výsledků o mnoho dříve.
+    \item Cena je v dnešní době velmi důležitým faktorem pro potřeby simulací, protože experimenty s reálným systémem mohou být velmi drahé. Díky využití modelů a simulací je možné výrazně ušetřit na výrobě testovacích kusů. Toto je velmi patrné například v leteckém průmyslu - reálné systémy (letadla, jejich komponenty) se zde využívají až pro validaci výsledků předchozích simulací. 
+    \item Rychlost je dalším z kritérií pro běh simulací. V závislosti na výkonu výkonu stroje, který simulaci vykonává, můžeme simulaci zpomalovat a zrychlovat dle našich potřeb. Důležitým faktorem je zde výkon výpočetního zdroje, který nám omezuje maximální (minimální) rychlost simulace. Dobrým příkladem pro nutnost zrychlování simulace je sledování pohybu litosferických desek. Tento pohyb je v reálném systému velmi pomalý, ale pokud máme dostatečně výkonný výpočetní stroj, můžeme simulaci zrychlit a dosáhnout výsledků o mnoho dříve. 
     \item Replikovatelnost je faktor, který velmi úzce souvisí s cenou simulace. Pomocí simulace můžeme provést výpočty na jednom modelu prakticky nekonečně mnohokrát bez potřeby využití reálného systému. Pomocí replikovatelnosti jsme schopni dosáhnout přesnějších výsledků a tím pádem i větši znalosti vlastností objektů \cite{belanger2010and}.
     \item Bezpečnost je další faktor, který je velkou výhodou využití simulací. Některé experimenty s reálnými systémy není možné z bezpečnostních důvodů vůbec provádět - například crash testy letadel, nebo simulace chemických a jaderných reakcí, případně simulace epidemií různých nemocí.
     \item V neposlední řadě je to možnost experimentovat se systémy, které můžeme blíže zkoumat právě jen díky provádění simulací s nimi - například kolize vesmírných těles, působení černých děr \cite{Fragile_2007}, apod.
 \end{enumerate}
 
-Tento výpis výhod simulací rozhodně není konečný. Je velmi pravděpodobné, že se v blízké době objeví další velká výhoda tohoto procesu. Jelikož výpočetní výkon počítačů neustále roste podle Moorova zákona \cite{Schaller1997}, časem bude možné provádět experimenty s daleko složitějšími modely než doposud. Výsledky simulací se využívají mimo vědu také pro populárně naučné účely, případně pro potřeby využití ve filmovém a herním průmyslu \cite{James_2015}.
+Tento výpis výhod simulací rozhodně není konečný. Je velmi pravděpodobné, že se v blízké době objeví další velká výhoda tohoto procesu. Jelikož výpočetní výkon počítačů neustále roste podle Moorova zákona \cite{Schaller1997}, časem bude možné provádět experimenty s daleko složitějšími modely než doposud. Výsledky simulací se využívají mimo vědu také pro populárně naučné účely, případně pro potřeby využití ve filmovém a herním průmyslu \cite{James_2015}. 
 
 \subsection{Nevýhody využití simulací}
 
@@ -116,12 +116,12 @@ Stejně tak, jako simulace mohou šetřit naše zdroje, při nesprávném vymode
 
 \begin{enumerate}
     \item Velké nároky na výpočetní výkon je běžný problém všech výpočetních operací. S~rostoucími nároky na rychlost a výsledky simulací přímo uměrně roste také nárok na výkon simulačního stroje. Nicméně díky zvětšování výkonu v závislosti na Moorovu zákonu, viz kapitola \ref{vyhody}, je možné provádět složitější výpočetní operace i na běžných osobních počítačích a ne pouze na sálových superpočítačích, jako tomu bylo dříve.
-    \item Během simulace může docházet k chybám kvůli nevhodně zvolené numerické metodě, případně kvůli její nepřesnosti řešení. Tento stav dokáže ovlivnit i relativně bezchybně namodelovaný model a znehodnotit tak výsledky z experimentů s ním.
+    \item Během simulace může docházet k chybám kvůli nevhodně zvolené numerické metodě, případně kvůli její nepřesnosti řešení. Tento stav dokáže ovlivnit i relativně bezchybně namodelovaný model a znehodnotit tak výsledky z experimentů s ním. 
     \item Velká časová náročnost v případě, že chceme simulaci provést vícekrát. Tento problém je spjatý i s nároky na výpočetní výkon -- je-li výkon dostatečný, můžeme simulaci urychlit a tím i zkrátit čas simulace.
     \item Velmi důležitým problémem je problém ověřování validity. Pokud máme chybně namodelovaný model, pak výsledky simulace obsahují také chyby a tedy model není validní. Ověřování validity modelu by mělo proběhnout ještě před provedením simulace, tak, abychom předešli jeho následnému přemodelování.
 \end{enumerate}
 
-Stejně jako u výhod simulací v kapitole \ref{vyhody} není tento výčet konečný. Další velkou nevýhodou je například vysoká složitost vytvoření modelu. A stejně jako u výhod, i zde je pravděpodobné, že se další velké nevýhody budou objevovat s přibývajícím časem.
+Stejně jako u výhod simulací v kapitole \ref{vyhody} není tento výčet konečný. Další velkou nevýhodou je například vysoká složitost vytvoření modelu. A stejně jako u výhod, i zde je pravděpodobné, že se další velké nevýhody budou objevovat s přibývajícím časem. 
 
 \chapter{Popis použitých simulačních jazyků a nástrojů}
 \label{kapitola3}
@@ -172,7 +172,7 @@ Stejně jako u jazyků MATLAB a Modelica jsou grafy vykreslené v jazyce Python 
 \subsection{MATLAB}
 \label{matlab-desc}
 
-Simulační nástroj MATLAB, je stejně jako jazyk MATLAB, který je popsán v kapitole \ref{matlab-lang}, uzavřený nástroj vyvíjený společností MathWorks. Tento simulační nástroj je mateřským prostředím pro nástroj Simulink, který je popsán v kapitole \ref{simulink-desc}.
+Simulační nástroj MATLAB, je stejně jako jazyk MATLAB, který je popsán v kapitole \ref{matlab-lang}, uzavřený nástroj vyvíjený společností MathWorks. Tento simulační nástroj je mateřským prostředím pro nástroj Simulink, který je popsán v kapitole \ref{simulink-desc}. 
 
 Nástroj umožňuje modelování modelů a následné simulace s nimi. Tento nástroj nabízí široký záběr možností využití, od matematických výpočtů, přes použití pro eknomii, až po využití pro genetické algoritmy ve strojírenství \cite{Zapletal2016}.
 
@@ -190,7 +190,12 @@ Nástroj umožňuje modelování modelů a následné simulace s nimi. Tento ná
 Simulink je programovatelná grafická nástavba pro nástroj MATLAB. Tento nástroj je také vyvíjen společností MathWorks. Hlavní využití nástroje je jednoduché vymodelování systému pomocí grafických programovatelných bloků, respektive blokových schemat. Pro tyto účely jsou v rámci nástroje Simulink předem vytvořeny a předdefinovány bloky pro tvorbu dynamických a spojitých modelů. Další výhodou je přímé generování kódu v jazyce C, případně v jazyce C++. Běh simulací s takto vytvořenými modely je možné sledovat v reálném čase.
 
 \subsection{GNU Octave}
-\todo{kompatibilita s matlabem, zadarmo}
+Nástroj Octave je vyvíjený pod veřejnou licencí GNU General Public Licence (GPL) \cite{OctaveManual}. Syntax jazyka, který je použit k modelování v GNU Octave je velmi podobný jazyku MATLAB, dokonce je s tímto jazykem ve větší části kompatibilní. Hlavním rozdílem v syntaxi je ten, že Octave podporuje autoinkrementaci stejně, tak jako například jazyk C -- MATLAB tuto podporu bohužel nemá. 
+Mezi další rozdíly patří již jen drobně odlišné syntaktické zápisy, případně volání jinak pojmenovaných funkcí, například pro matematickou operaci umocňování se v Octave používá zápis \texttt{a\^\space b} nebo \texttt{a**b}, zatímco v MATLABu je možné tuto operaci zapsat pouze jako \texttt{a\^\space b} \cite{OctaveManual}.
+
+Hlavní výhodou nástroje GNU Octave je, jak už bylo nastíněno výše, že je volně otevřený a zdarma. Tento nástroj má poměrně širokou komunitu uživatelů, kteří vyvíjí další rozšiřující balíčky pro potřeby simulací, matematiky, statistiky a dalších jiných vědeckých odvětví\footnote{https://octave.sourceforge.io/packages.php}.
+
+
 
 \subsection{SciLab}
 \todo{syntax like MATLAB, zadarmo}
