--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -14,6 +14,18 @@
   type = {Diplomová práce},
 }
 
+@book{OctaveManual,
+  author    = {John W. Eaton, David Bateman, S\oren Hauberg, and Rik
+Wehbring},
+  title     = {{GNU Octave} version 5.0.1 manual: a high-level
+interactive language for numerical computations},
+  publisher = {CreateSpace Independent Publishing Platform},
+  year      = {2018},
+  note      = {{ISBN} 1441413006},
+  url       = {http://www.gnu.org/software/octave/doc/interpreter},
+  accessed  = {\today}
+}
+
     @article{Schaller1997,
         author = {R.R. Schaller},
         journal = {IEEE Spectrum},
