--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -14,6 +14,17 @@
   type = {Diplomová práce},
 }
 
+@misc{Gilberto,
+  author = {Urroz Gilberto E},
+  title = {Comparison of Scilab syntax and Functions to Matlab},
+  year = {2001},
+  pages = {13},
+  medium = {online},
+  accessed = {2019-04-26},
+  URL = {https://agenda.ct.infn.it/event/319/material/6/0.pdf},
+  howpublished = "infocleaninghouse.com"
+}
+
 @book{OctaveManual,
   author    = {John W. Eaton, David Bateman, S\oren Hauberg, and Rik
 Wehbring},
